// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`collapsed.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
![hello][]

=====================================output=====================================
![hello][]

================================================================================
`;

exports[`full.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
![hello][world]

=====================================output=====================================
![hello][world]

================================================================================
`;

exports[`full-no-alt.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
![][world]

=====================================output=====================================
![][world]

================================================================================
`;

exports[`shortcut.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
![hello]

=====================================output=====================================
![hello]

================================================================================
`;
